<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:showIn="@layout/activity_google_podcasts">

    <TextView
        android:id="@+id/podcast_for_you_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/podcast_for_you_header"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/podcast_for_you_label"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorGooglePodcastsAccent"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="2dp"
            app:tabSelectedTextColor="@color/colorGooglePodcastsAccent"
            app:tabTextAppearance="@style/CustomTabWidgetText">

            <android.support.design.widget.TabItem
                android:id="@+id/podcast_for_you_tab_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podcast_for_you_tab_1_title" />

            <android.support.design.widget.TabItem
                android:id="@+id/podcast_for_you_tab_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podcast_for_you_tab_2_title" />

            <android.support.design.widget.TabItem
                android:id="@+id/podcast_for_you_tab_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podcast_for_you_tab_3_title" />
        </android.support.design.widget.TabLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/podcast_for_you_podcast1_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/podcast_1" />

            <TextView
                android:id="@+id/podcast_for_you_podcast1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/podcast_for_you_podcast1_image"
                android:layout_marginTop="2dp"
                android:layout_toStartOf="@+id/podcast_for_you_podcast1_play"
                android:layout_toEndOf="@+id/podcast_for_you_podcast1_image"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/podcast_for_you_podcast1_title"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/podcast_for_you_podcast1_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/podcast_for_you_podcast1_image"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/podcast_for_you_podcast1_image"
                android:text="@string/podcast_for_you_podcast1_subtitle"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/podcast_for_you_podcast1_play"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/ic_play" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/podcast_for_you_podcast2_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/podcast_3" />

            <TextView
                android:id="@+id/podcast_for_you_podcast2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/podcast_for_you_podcast2_image"
                android:layout_marginTop="2dp"
                android:layout_toStartOf="@+id/podcast_for_you_podcast2_play"
                android:layout_toEndOf="@+id/podcast_for_you_podcast2_image"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/podcast_for_you_podcast2_title"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/podcast_for_you_podcast2_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/podcast_for_you_podcast2_image"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/podcast_for_you_podcast2_image"
                android:text="@string/podcast_for_you_podcast2_subtitle"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/podcast_for_you_podcast2_play"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/ic_play" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/podcast_for_you_podcast3_image"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                app:srcCompat="@drawable/podcast_5" />

            <TextView
                android:id="@+id/podcast_for_you_podcast3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/podcast_for_you_podcast3_image"
                android:layout_marginTop="2dp"
                android:layout_toStartOf="@+id/podcast_for_you_podcast3_play"
                android:layout_toEndOf="@+id/podcast_for_you_podcast3_image"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/podcast_for_you_podcast3_title"
                android:textAppearance="@style/TextAppearance.AppCompat" />

            <TextView
                android:id="@+id/podcast_for_you_podcast3_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/podcast_for_you_podcast3_image"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/podcast_for_you_podcast3_image"
                android:text="@string/podcast_for_you_podcast3_subtitle"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/podcast_for_you_podcast3_play"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/ic_play" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/podcast_for_you_allnew_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:srcCompat="@drawable/ic_arrow_right" />

            <TextView
                android:id="@+id/podcast_for_you_allnew_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/podcast_for_you_allnew_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/podcast_for_you_allnew_text"
                android:textColor="@color/colorGooglePodcastsAccent" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>